--- a/vignettes/MINVALintroduction.Rmd
+++ b/vignettes/MINVALintroduction.Rmd
@@ -12,11 +12,11 @@ vignette: >
 knitr::opts_chunk$set(collapse = TRUE, dev = "png", fig.width = 7, fig.height = 5, message = FALSE, warning = FALSE)
 ```
 ### Introduction to MINVAL
-The **MINVAL** package was designed as a tool to identify orphan metabolites and evaluate the mass and charge balance of stoichiometric reactions. The package also includes functions to write models in TSV and SBML formats, extract all reactants, products, metabolite names and compartments from a metabolic reconstruction. It is available through CRAN repositories, to install it just type:
+The **MINVAL** package was designed as a tool to identify orphan metabolites and evaluate the mass and charge balance of stoichiometric reactions. The package also includes functions to characterize and write models in TSV and SBML formats, extract all reactants, products, metabolite names and compartments from a metabolic reconstruction. It is available through CRAN repositories, to install it just type:
 ```{r, eval=FALSE}
 install.packages("minval")
 ```
-**MINVAL** includes eleven functions designed to check and depurate metabolic reconstructions before its interrogation through Flux Balance Analysis (FBA). FBA methods are available for the R language in the `"sybil"` (**Sy**stems **Bi**ology **L**ibrary) package. To load required packages just type:
+**MINVAL** package includes twelve functions designed to characterize, check and depurate metabolic reconstructions before its interrogation through Flux Balance Analysis (FBA). FBA methods are available for the R language in the `"sybil"` (**Sy**stems **Bi**ology **L**ibrary) package. To load required packages just type:
 ```{r, message=FALSE}
 library("minval")
 library("sybilSBML")
@@ -40,7 +40,7 @@ products(reactionList = "ADP[c] + Phosphoenolpyruvate[c] => ATP[c] + Pyruvate[c]
 reactants(reactionList = "H2O[c] + Urea-1-Carboxylate[c] <=> 2 CO2[c] + 2 NH3[c]")
 products(reactionList = "H2O[c] + Urea-1-Carboxylate[c] <=> 2 CO2[c] + 2 NH3[c]")
 ```
-To show the potential use of the **MINVAL** package a set of 19 stoichiometric reactions that represent an unbalanced model of the glycolysis process was included. To load it just type:
+To show the potential use of the **MINVAL** package a human-readable model composed by a set of 19 stoichiometric reactions that represent an unbalanced model of the glycolysis process was included. To load it just type:
 ```{r}
 glycolysis <- read.csv(file = system.file("extdata", "glycolysisModel.csv",
                                           package = "minval"), 
@@ -49,7 +49,7 @@ glycolysis <- read.csv(file = system.file("extdata", "glycolysisModel.csv",
                         )
 glycolysis$REACTION
 ```
-Metabolic models include also another additional information related with the stoichiometric reactions. The follows are just the minimal information required:
+Metabolic models include also another additional information related to the stoichiometric reactions. The generally associated information is:
 
 * **ID:** A list of single character strings containing the reaction abbreviations, Entries in the field abbreviation are used as reaction ids, so they must be unique.
 * **REACTION:** A set of stoichiometric reaction with the following characteristics:
@@ -68,7 +68,7 @@ Metabolic models include also another additional information related with the st
 colnames(glycolysis)
 ```
 ### SBML files
-The standard format to share and store biological processes such as metabolic models is the Systems Biology Markup Language (SBML) format. **MINVAL** includes the `"writeSBML"` function which is able to write models in SBML (`level = 2`, `version = 1`) format as follows:
+The standard format to share and store biological processes such as metabolic models is the Systems Biology Markup Language (SBML) format. **MINVAL** package includes the `"writeSBML"` function which is able to write models in SBML (`level = 2`, `version = 1`) format as follows:
 ```{r}
 writeSBML(modelData = glycolysis,
           modelID = "Glycolysis",
@@ -84,12 +84,12 @@ After load the metabolic model, it can be interrogated through FBA using the `op
 
 Glycolysis pathway can be summarized as: `1 alpha-D-Glucose[c] + 2 NAD+[c] + 2 ADP[c] + 2 Orthophosphate[c] => 2 Pyruvate[c] + 2 NADH[c] + 2 H+[c] + 2 ATP[c] + 2 H2O[c]` where the metabolism of one molecule of alpha-D-Glucose yield two molecules of pyruvate. 
 
-As is shown below, interrogated glycolysis model estimates a production of six molecules of pyruvate by each alpha-D-Glucose molecule due a mass unbalance. FBA methods are sensitive to thermodynamic (mass - charge) unbalance, so in order to achieve a valid biological extrapolation is mandatory to avoid this type of unbalancing in all model reactions.
+As is shown below, interrogated glycolysis model estimates a production of six molecules of pyruvate by each alpha-D-Glucose molecule due a mass unbalance. FBA methods are sensitive to thermodynamic (mass-charge) unbalance, so in order to achieve a valid biological extrapolation is mandatory to avoid this type of unbalancing in all model reactions.
 ```{r}
 sybil::optimizeProb(glycoModel)
 ```
 ### Syntax validation
-The first step for a stoichiometric reactions validation is to check their syntax. Stoichiometric reactions must have the following mandatory characteristics:
+The first step for a stoichiometric reactions validation is to check their syntax. Valid stoichiometric reactions must have the following mandatory characteristics:
 
 - Arrows symbols must be given in the form `'=>'` or `'<=>'` (Inverse arrow symbols `'<='` or other types as: `'-->'`, `'<==>'`, `'->'` will not be parsed and will lead to errors.)
 - Arrow symbols and plus signs (`+`) must be surrounded by a space character.
@@ -98,16 +98,16 @@ The first step for a stoichiometric reactions validation is to check their synta
 - Exchange reactions must have only one metabolite before arrow symbol.
 - Compartments must be given between square brackets (`[compartment]`) joined at the end of metabolite name.
 
-Syntax validity can be checked through minval using the `validateSyntax` function which returns a boolean `TRUE` value if the stoichiometric reaction pass all validations. To validate syntax just type:
+Syntax validity can be checked through **MINVAL** package using the `validateSyntax` function which returns a boolean `TRUE` value if the stoichiometric reaction passes all validations. To validate reactions syntax just type:
 ```{r}
 validateSyntax(reactionList = glycolysis$REACTION)
 ```
 
 ### Mass - Charge Balance Validation
-Another step for a stoichiometric reactions validation is to check their mass - charge balance. This process requires the use of a reference with chemical formulas, molecular weights or net charges for each metabolite included in the metabolic model.
+Another step for a stoichiometric reactions validation is to check their mass-charge balance. This process requires the use of a reference with chemical formulas, molecular weights and/or net charges for each metabolite included in the metabolic model.
 
 #### ChEBI database download
-**MINVAL** includes the `downloadChEBI` function that allows the download of different releases of the Chemical Entities of Biological Interest (ChEBI) database, a freely available dictionary of molecular entities focused on 'small' chemical compounds involved in biochemical reactions. To download the latest version (this process takes aprox. 2 min with a 5 Mb internet connection) of the ChEBI database just type:
+**MINVAL** package includes the `downloadChEBI` function that allows the download of different releases of the Chemical Entities of Biological Interest (ChEBI) database, a freely available dictionary of molecular entities focused on 'small' chemical compounds involved in biochemical reactions. To download the latest version (this process takes aprox. 2 min with a 5 Mb internet connection) of the ChEBI database just type:
 
 ```{r, eval = FALSE}
 ChEBI <- downloadChEBI(release = "latest",
@@ -123,9 +123,9 @@ head(chemicalData)
 ```
 
 #### Mass Balance Validation
-In a balanced stoichiometric reaction according to the Lomonosov-Lavoisier law, the mass comprising the reactants should be the same mass present in the products. If chemical formula is given, the `checkBalance` function multiplies the atom numbers by their respective stoichiometric coefficient, and establishes if the atomic composition of reactants and products are the same. If molecular weight is given then sum of masses for reactants and products are compared. In both cases a boolean `TRUE` value is returned if mass is balanced.
+In a balanced stoichiometric reaction according to the *Lomonosov-Lavoisier* law, the mass comprising the reactants should be the same mass present in the products. If the chemical formula is given, the `checkBalance` function multiplies the atom numbers by their respective stoichiometric coefficient and establishes if the atomic composition of reactants and products are the same. If the molecular weight is given then the sum of masses of reactants and products are compared. In both cases, a boolean `TRUE` value is returned if the mass is balanced.
 
-Mass balance can be tested using the chemical formula or the molecular weight associated to each metabolite as follows: 
+Mass balance can be tested using the chemical formula or the molecular weight associated to each metabolite as follows:
 ```{r}
 checkBalance(reactionList = glycolysis$REACTION,
              referenceData = chemicalData,
@@ -143,7 +143,7 @@ checkBalance(reactionList = glycolysis$REACTION,
              mWeight = "MASS"
              )
 ```
-When all stoichiometric reactions are balanced, then the model can be exported and loaded to be interrogated again:
+When all stoichiometric reactions are mass-balanced, then the model can be exported and loaded to be interrogated again:
 ```{r}
 writeSBML(modelData = glycolysis,
           modelID = "GlycolysisBalanced",
@@ -151,7 +151,6 @@ writeSBML(modelData = glycolysis,
           )
 
 sybil::optimizeProb(sybilSBML::readSBMLmod("glycolysisBalanced.xml"))
-
 ```
 
 #### Charge Balance Validation
@@ -170,6 +169,7 @@ A metabolic model is often represented in a more compact form called the stoichi
 stoichiometricMatrix(reactionList = glycolysis$REACTION)
 ```
 #### Metabolites
+The `metabolites` function automatically identifies and return all metabolites (with or without compartments) for a specific or a set of stoichiometric reactions. Some FBA implementations require the list of all metabolites included in the metabolic reconstruction as an independent section of the human-readable input model.
 ```{r}
 metabolites(reactionList = glycolysis$REACTION)
 ```
@@ -178,10 +178,12 @@ metabolites(reactionList = glycolysis$REACTION,
             woCompartment = TRUE)
 ```
 #### Compartments
+As well as in cells, in which not all reactions occur in all compartments,  stoichiometric reactions in a metabolic reconstruction can be labeled to be restricted to a single compartment during FBA through the assignment of  a compartment label at the end of each metabolite name. Some FBA implementations require the list of all compartments included in the metabolic reconstruction as an independent section of the human-readable input file.
 ```{r}
 compartments(reactionList = glycolysis$REACTION)
 ```
 #### OrphanMetabolites
+`orphanMetabolites` or compounds that are not produced or consumed in any other reaction are one of the main causes of mass accumulation in metabolic reconstructions. The `orphanReactants` function identifies compounds that are not produced internally by any other reaction and should be added to the reconstruction, for instance, as an exchange reaction while the `orphanProducts` function identifies compounds that are not consumed internally by any other reaction and should be added to the reconstruction as a sink reaction.
 ```{r}
 orphanMetabolites(reactionList = glycolysis$REACTION[1:10])
 ```
@@ -191,6 +193,7 @@ orphanProducts(reactionList = glycolysis$REACTION[1:10])
 
 ```
 ### TSV files
+The function `writeTSV` writes a metabolic model in three text files, following a character-separated value format. Each line contains one entry; the default value separator is a tab. TSV models are the default input format for the `sybil` R package.
 ```{r}
 writeTSV(modelData = glycolysis,
           modelID = "Glycolysis",
