characterizeReactions function documentation was fixed

--- a/vignettes/characterizeReactions.Rmd
+++ b/vignettes/characterizeReactions.Rmd
@@ -23,7 +23,7 @@ dim(RECON)
 ```
 
 ```{r}
-RECONcharacteristics <- characterizeRXNs(reactionList = RECON$REACTION)
+RECONcharacteristics <- characterizeReactions(reactionList = RECON$REACTION)
 RECONcharacteristics
 ```
 
